# news-telegram-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
news_telegram_bot/: __init__.py  config.py  db.py  explore_catalog.json  explore_catalog.py  formatter.py  keywords.py  main.py  rss_client.py
