[project]
name = "news-telegram-bot"
version = "0.1.0"
description = "Telegram bot that polls RSS feeds and sends new items."
requires-python = ">=3.9"
dependencies = [
    "python-telegram-bot[job-queue]>=21.0",
    "feedparser>=6.0.11",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "tzdata>=2024.1",
]

[project.scripts]
news-bot = "news_telegram_bot.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["news_telegram_bot"]

[tool.hatch.build.targets.wheel.force-include]
"news_telegram_bot/explore_catalog.json" = "news_telegram_bot/explore_catalog.json"
